adding first name in lorem

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ab, et illum, quam iusto nesciunt dolorum ipsum quibusdam ut tempore saepe fugit. Nostrum, atque dicta? Et animi error quisquam dignissimos!
+    Bogdan ipsum dolor sit amet consectetur adipisicing elit. Ratione ab, et illum, quam iusto nesciunt dolorum ipsum quibusdam ut tempore saepe fugit. Nostrum, atque dicta? Et animi error quisquam dignissimos!
 </body>
 </html>
