--- a/venue.html
+++ b/venue.html
@@ -33,8 +33,8 @@
         </div>
     
 
-        <script src="js/venue.js"></script>
-        <!-- <script src="js/venuetest.js"></script> -->
+        <!-- <script src="js/venue.js"></script> -->
+        <script src="js/venuetest.js"></script>
 
     
 </body>
