--- a/hmtl/textindex.html
+++ b/hmtl/textindex.html
@@ -143,7 +143,7 @@
           <div class="panel-body">
             <div id="events" class="list-group d-flex flex-row flex-wrap">
             
-              <div class="col-6 align-items-stretch">
+              <div class="col-6 align-items-stretch style= "height: 100px;">
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Event title</h4>
                 <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -173,14 +173,14 @@
             </div>
             </div>
           </div>
-          <div class="panel-footer" d-flex>
+          <!-- <div class="panel-footer" d-flex>
             <nav>
               <ul class="pager">
                 <li id="prev" class="previous"><a href="#"><span aria-hidden="true">&larr;</span></a></li>
                 <li id="next" class="next"><a href="#"><span aria-hidden="true">&rarr;</span></a></li>
               </ul>
             </nav>
-          </div>
+          </div> -->
         </div>
         
         <div id='attraction-panel' class="panel panel-primary">
