--- a/js/test.html
+++ b/js/test.html
@@ -21,7 +21,7 @@
       margin: 0;
       padding: 0;
       font-family: sans-serif;
-      background-image: css / pop.jpg;
+    
     }
   
   </style>
@@ -47,7 +47,7 @@
         placeholder="Type in artist name"
         aria-describedby="button-addon2"
       />
-
+      <div style="background-image: url("pop.jpg");">
       <div id="temp" class="p-1 div"></div>
       <br />
       <div id="temp2" class="p-1 div"></div>
