--- a/index.html
+++ b/index.html
@@ -1,16 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<title>about US UI</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Indie+Flower|Montserrat|Quicksand&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="HandheldFriendly" content="true">
 </head>
 <body>
-    hello Blach ipsum dolor sit amet consectetur adipisicing elit. Ratione ab, et illum, quam iusto nesciunt dolorum ipsum quibusdam ut tempore saepe fugit. Nostrum, atque dicta? Et animi error quisquam dignissimos!
 
-    4 of july ipsum dolor sit amet consectetur adipisicing elit. Ratione ab, et illum, quam iusto nesciunt dolorum ipsum quibusdam ut tempore saepe fugit. Nostrum, atque dicta? Et animi error quisquam dignissimos!
-    Memorial Day ipsum dolor sit amet consectetur adipisicing elit. Ratione ab, et illum, quam iusto nesciunt dolorum ipsum quibusdam ut tempore saepe fugit. Nostrum, atque dicta? Et animi error quisquam dignissimos!
+	<div class="container">
+		<div class="nav">
+			<div class="logo">YourLogo</div>
+		<div>
+			<span>Product</span>
+			<span class="active">About Us</span>
+			<span>Contact Us</span>
+		</div>
+		</div>
+		<div class="about-us">
+			<div class="who-we-are">
+				<h3>Who we are</h3>
+				<span>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</span>
+			</div>
+			<div class="cards">
+				<div class="card">
+					<div class="card-img card-img1"></div>
+					<div class="card-body">
+						<h3>Lane Reynolds</h3>
+						<span>Web developer</span>
+						<p>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+					</div>
+					</div>
+			
+			
+			<div class="card">
+					<div class="card-img card-img2"></div>
+					<card class="card-body">
+						<h3>Bogdan</h3>
+						<span>Web developer</span>
+						<p>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+					</card>
+				</div>
+			
+			<div class="card">
+					<div class="card-img card-img3"></div>
+					<card class="card-body">
+						<h3>Jennifer</h3>
+						<span>Web developer</span>
+						<p>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+					</card>
+				</div>
+			
+			<div class="card">
+					<div class="card-img card-img4"></div>
+					<card class="card-body">
+						<h3>Lorenzo</h3>
+						<span>Web developer</span>
+						<p>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+					</card>
+				</div>
+		
+			
+		</div>
+
+	<div class="social-media">
+				<i class="fa fa-github" style="font-size:24px"></i>
+			<i class="fa fa-linkedin" style="font-size:24px"></i>
+		<i class="fa fa-twitter" style="font-size:24px"></i>
+		<i class="fa fa-facebook" style="font-size:24px"></i>
+			</div>
+	</div>
+
+
 </body>
-#this is all a test
 </html>
