--- a/hmtl/aboutus.html.html
+++ b/hmtl/aboutus.html.html
@@ -13,7 +13,7 @@
 
 	<div class="container">
 		<div class="nav">
-			<div class="logo">YourLogo</div>
+			<div class="logo">Mooove</div>
 		<div>
 			<span>Product</span>
 			<span class="active">About Us</span>
