--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -14,7 +14,7 @@
 	<div class="container">
 		<div class="nav">
 			<div class="logo">Mooove</div>
-		<div>
+		<div class="nav-links">
 			<span>Product</span>
 			<span class="active">About Us</span>
 			<span>Contact Us</span>
