--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -50,7 +50,7 @@
 					<card class="card-body">
 						<h3>Jennifer</h3>
 						<span>Web developer</span>
-						<p>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+						<p>To describe me in 3 words, music, mountains and dogs! Living in Asheville,NC.</p>
 					</card>
 				</div>
 			
