--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -15,15 +15,17 @@
 		<div class="nav">
 			<div class="logo">Mooove</div>
 		<div class="nav-links">
-			<span>Product</span>
-			<span class="active">About Us</span>
-			<span>Contact Us</span>
+			<a href="..\hmtl\textindex.html">Home</a>
+			<a href="..\js\test.html">Performers</a>
+			<a href="..\hmtl\venue.html">Venues</a>
+			<a href="..\html\city.html">City</a>
+			<a href="..\aboutus\aboutus.html">About Us</a>
 		</div>
 		</div>
 		<div class="about-us">
 			<div class="who-we-are">
 				<h3>Who we are</h3>
-				<span>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</span>
+				<span>A group of folks trying to learn to code :)</span>
 			</div>
 			<div class="cards">
 				<div class="card">
@@ -31,7 +33,7 @@
 					<div class="card-body">
 						<h3>Lane Reynolds</h3>
 						<span>Web developer</span>
-						<p>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+						<p>To describe me in 3 words, hiking, cars, and cooking! Living in Atlanta, GA</p>
 					</div>
 					</div>
 			
@@ -41,7 +43,7 @@
 					<card class="card-body">
 						<h3>Bogdan</h3>
 						<span>Web developer</span>
-						<p>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+						<p>To describe me in 3 words software, beaches, and soccer! Living in Chicago, IL.</p>
 					</card>
 				</div>
 			
@@ -59,7 +61,7 @@
 					<card class="card-body">
 						<h3>Lorenzo</h3>
 						<span>Web developer</span>
-						<p>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+						<p>To describe me in 3 words, patios, music, and family! Living in Atlanta, GA.</p>
 					</card>
 				</div>
 		
