--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -17,8 +17,8 @@
 		<div class="nav-links">
 			<a href="..\hmtl\textindex.html">Home</a>
 			<a href="..\js\test.html">Performers</a>
-			<a href="..\hmtl\venue.html">Venues</a>
-			<a href="..\html\city.html">City</a>
+			<a href="..\venue.html">Venues</a>
+			<a href="..\city.html">City</a>
 			<a href="..\aboutus\aboutus.html">About Us</a>
 		</div>
 		</div>
